# Fractal-Renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: julia.cpp  julia.hpp  main.cpp  rgbUtils.cpp  rgbUtils.hpp  utils.cpp  utils.hpp
